--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "v-enum",
-	"version": "7.6.19.0",
+	"name": "@omarty/v-enum",
+	"version": "1.1.0",
 	"description": "",
 	"main": "index.js",
 	"author": {
